--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,1 +1,54 @@
 /* CSS Document */
+@CHARSET "UTF-8";
+/* main menu */
+div.main_menu{
+	text-align: center;
+	padding-bottom: 10px;
+}
+div.main_menu button{
+	height: 50px;
+	text-align: center;
+	cursor: pointer;
+	border: 0;
+	padding: 0;
+	font-weight: 700;
+	display: inline-block;
+	vertical-align: baseline;
+	line-height: 30px;
+	outline: 0;
+	border-radius: 3px;
+	color: #fff;
+	box-shadow: 0 2px 5px rgba(0,28,88,.3);
+	font-size: 20px;
+	margin-left: 20px;
+}
+
+
+
+button.steward_button{
+	background-color: #fc7337;
+
+}
+
+div.main_menu a{
+	height: 35px;
+	text-align: center;
+	cursor: pointer;
+	border: 0;
+	padding: 2;
+	font-weight: 700;
+	display: inline-block;
+	vertical-align: baseline;
+	line-height: 30px;
+	outline: 0;
+	border-radius: 3px;
+	color: #fff;
+	box-shadow: 0 2px 5px rgba(0,28,88,.3);
+	font-size: 20px;
+	margin-left: 20px;
+}
+
+a.steward_a{
+	background-color: #fc7337;
+
+}
