--- a/src/main/webapp/css/health_addRecord.css
+++ b/src/main/webapp/css/health_addRecord.css
@@ -66,7 +66,7 @@ div#feel_left_container{
 div#feel_right_container{
 	float: left;
 	width: 550px;
-	height: 100%;
+	/**height: 100%;*/
 	margin-bottom: 50px;
 }
 div#feel_img_container{
